Segunda pre entrega

--- a/index.html
+++ b/index.html
@@ -33,37 +33,38 @@
             <h1 class="titulo">Somos la mejor pagina de diseño web</h1>  
         </div>
 
-        <div class="container">
-            <div class="row align-items-start">
-              <div class="col-12 col-md-4 parrafo">
-                <div class="card">
-                    <div class="card-body">
-                      <h5 class="card-title parrafo__titulo">NOS DIFERENCIAMOS, TE DIFERENCIAMOS</h5>
-                      <p class="card-text">Desarrollamos páginas web de alto impacto apuntadas a maximizar resultados. Somos especialistas en generar soluciones a medida y diseño personalizado para cada cliente <br>
-                        Realmente creemos que con una estrategia web correcta, comunicación acertada y diseño creativo, tu empresa puede sacar un provecho de internet MUY superior al que imaginas posible.
-                        Y QUEREMOS AYUDARTE A LOGRARLO.</p>
-                    </div>
-                  </div>
+        <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="true">
+            <div class="carousel-indicators">
+              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+            </div>
+            <div class="carousel-inner">
+              <div class="carousel-item active parrafo">
+                <h5 class="parrafo__titulo">NOS DIFERENCIAMOS, TE DIFERENCIAMOS</h5>
+                <p>Desarrollamos páginas web de alto impacto apuntadas a maximizar resultados. Somos especialistas en generar soluciones a medida y diseño personalizado para cada cliente. <br>
+                    Realmente creemos que con una estrategia web correcta, comunicación acertada y diseño creativo, tu empresa puede sacar un provecho de internet MUY superior al que imaginas posible. <br>
+                    Y QUEREMOS AYUDARTE A LOGRARLO.</p>
               </div>
-              <div class="col-12 col-md-4 parrafo">
-                <div class="card">
-                    <div class="card-body">
-                      <h5 class="card-title parrafo__titulo">MÁXIMA ATENCIÓN AL DETALLE</h5>
-                      <p class="card-text">Para lograr el famoso efecto «wow» de nuestros clientes en internet, trabajamos el diseño web cuidando los detalles al máximo.  Seleccionamos cuidadosamente los <br>
-                        elementos, los colores, la distribución, la tipografía. Cada detalle cuenta.  La luz de las fotos, contrastes, llamados a la acción… consideramos cada aspecto del diseño.</p>
-                    </div>
-                  </div>
+              <div class="carousel-item parrafo">
+                <h5 class="parrafo__titulo">MÁXIMA ATENCIÓN AL DETALLE</h5>
+                      <p">Para lograr el famoso efecto «wow» de nuestros clientes en internet, trabajamos el diseño web cuidando los detalles al máximo. <br> Seleccionamos cuidadosamente los 
+                      elementos, los colores, la distribución, la tipografía. Cada detalle cuenta.  La luz de las fotos, contrastes, llamados a la acción… consideramos cada aspecto del diseño.</p>
               </div>
-              <div class="col-12 col-md-4 parrafo">
-                <div class="card">
-                    <div class="card-body">
-                      <h5 class="card-title parrafo__titulo">GENERAMOS ESTRATEGIAS EXITOSAS</h5>
-                      <p class="card-text">Nos especializamos en el desarrollo, implementación y optimización de páginas web. Proveemos soluciones personalizadas para cada necesidad. Ponemos en práctica un enfoque <br>
+              <div class="carousel-item parrafo">
+                <h5 class="parrafo__titulo">GENERAMOS ESTRATEGIAS EXITOSAS</h5>
+                      <p>Nos especializamos en el desarrollo, implementación y optimización de páginas web. Proveemos soluciones personalizadas para cada necesidad. Ponemos en práctica un enfoque
                         estratégico de marketing que permite lograr páginas web que obtienen resultados concretos.</p>
-                    </div>
-                  </div>
               </div>
             </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Next</span>
+            </button>
           </div>
         
     </main>
