--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Diseño de paginas web</title>
+    <meta name="keywords" content="Diseño, Web, Pagina, Desarrollo, SEO, Inicio">
+    <meta name="description" content="Contamos con la experiencia en el diseño de páginas web, contamos con los recursos para hacer realidad lo que tenes en mente. consúltanos.">
+    <title>WWW Diseño de paginas web - Inicio</title>
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" 
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -41,18 +43,18 @@
             </div>
             <div class="carousel-inner">
               <div class="carousel-item active parrafo">
-                <h5 class="parrafo__titulo">NOS DIFERENCIAMOS, TE DIFERENCIAMOS</h5>
+                <h2 class="parrafo__titulo">NOS DIFERENCIAMOS, TE DIFERENCIAMOS</h2>
                 <p>Desarrollamos páginas web de alto impacto apuntadas a maximizar resultados. Somos especialistas en generar soluciones a medida y diseño personalizado para cada cliente. <br>
                     Realmente creemos que con una estrategia web correcta, comunicación acertada y diseño creativo, tu empresa puede sacar un provecho de internet MUY superior al que imaginas posible. <br>
                     Y QUEREMOS AYUDARTE A LOGRARLO.</p>
               </div>
               <div class="carousel-item parrafo">
-                <h5 class="parrafo__titulo">MÁXIMA ATENCIÓN AL DETALLE</h5>
+                <h2 class="parrafo__titulo">MÁXIMA ATENCIÓN AL DETALLE</h2>
                       <p">Para lograr el famoso efecto «wow» de nuestros clientes en internet, trabajamos el diseño web cuidando los detalles al máximo. <br> Seleccionamos cuidadosamente los 
                       elementos, los colores, la distribución, la tipografía. Cada detalle cuenta.  La luz de las fotos, contrastes, llamados a la acción… consideramos cada aspecto del diseño.</p>
               </div>
               <div class="carousel-item parrafo">
-                <h5 class="parrafo__titulo">GENERAMOS ESTRATEGIAS EXITOSAS</h5>
+                <h2 class="parrafo__titulo">GENERAMOS ESTRATEGIAS EXITOSAS</h2>
                       <p>Nos especializamos en el desarrollo, implementación y optimización de páginas web. Proveemos soluciones personalizadas para cada necesidad. Ponemos en práctica un enfoque
                         estratégico de marketing que permite lograr páginas web que obtienen resultados concretos.</p>
               </div>
