--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contacto - Diseño de paginas web</title>
+    <meta name="keywords" content="Diseño, Web, Pagina, Desarrollo, SEO, Contacto">
+    <meta name="description" content="Contamos con la experiencia en el diseño de páginas web, contamos con los recursos para hacer realidad lo que tenes en mente. consúltanos.">
+    <title>WWW Diseño de paginas web - Contacto</title>
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" 
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -28,7 +30,7 @@
     </header>
 
     <main class="inicio">
-        <h2 class="contacto__titulo">¡Pedí tu presupuesto o cualquier duda que tengas sobre nuestros servicios!</h2>
+        <h1 class="contacto__titulo">¡Pedí tu presupuesto o cualquier duda que tengas sobre nuestros servicios!</h1>
         
         <form class="contacto__form" action="ruta" method="get o post" enctype="encriptacion">
 
