--- a/pages/faq.html
+++ b/pages/faq.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Preguntas Frecuentes - Diseño de paginas web</title>
+    <meta name="keywords" content="Diseño, Web, Pagina, Desarrollo, SEO, Preguntas Frecuentes">
+    <meta name="description" content="Contamos con la experiencia en el diseño de páginas web, contamos con los recursos para hacer realidad lo que tenes en mente. observá nuestras preguntas mas frecuentes.">
+    <title>WWW Diseño de paginas web - Preguntas Frecuentes</title>
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" 
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -28,7 +30,7 @@
     </header>
 
     <main class="inicio">
-        <h2 class="faq__titulo">Preguntas Frecuentes</h2>
+        <h1 class="faq__titulo">Preguntas Frecuentes</h1>
 
         <div class="container faq__preguntas">
               <div class="col-12">
