--- a/pages/nuestros_clientes.html
+++ b/pages/nuestros_clientes.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nuestros Clientes - Diseño de paginas web</title>
+    <meta name="keywords" content="Diseño, Web, Pagina, Desarrollo, SEO, Clientes">
+    <meta name="description" content="Contamos con la experiencia en el diseño de páginas web, contamos con los recursos para hacer realidad lo que tenes en mente. observá la calidad de nuestros trabajos.">
+    <title>WWW Diseño de paginas web - Nuestros Clientes</title>
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" 
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -29,7 +31,7 @@
     </header>
 
     <main class="inicio">
-        <h2 class="clientes__titulo">Conocé a nuestros clientes</h2>
+        <h1 class="clientes__titulo">Conocé a nuestros clientes</h1>
 
         <div class="clientes__lista">
             <a class="clientes__enlace" href="https://www.pisosenmaderadiaz.com.ar/" target="_blank"> <img class="clientes__foto" src="../imagenes/PMD.png"  alt="PMD"> Pisos de Madera Diaz</a>
