--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Servicios - Diseño de paginas web</title>
+    <meta name="keywords" content="Diseño, Web, Pagina, Desarrollo, SEO, Servicios">
+    <meta name="description" content="Contamos con la experiencia en el diseño de páginas web, contamos con los recursos para hacer realidad lo que tenes en mente. consulta los diferentes servicios que ofrecemos.">
+    <title>WWW Diseño de paginas web - Servicios</title>
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" 
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -29,7 +31,7 @@
     </header>
 
     <main class="inicio">
-        <h2 class="servicios__titulo">Estos son nuestros planes de diseño para tu empresa</h2>
+        <h1 class="servicios__titulo">Estos son nuestros planes de diseño para tu empresa</h1>
        
         <div class="servicios__paquetes">
             <section class="servicios__paquete_individual">
