Entrega proyecto final

--- a/index.html
+++ b/index.html
@@ -44,18 +44,18 @@
             <div class="carousel-inner">
               <div class="carousel-item active parrafo">
                 <h2 class="parrafo__titulo">NOS DIFERENCIAMOS, TE DIFERENCIAMOS</h2>
-                <p>Desarrollamos páginas web de alto impacto apuntadas a maximizar resultados. Somos especialistas en generar soluciones a medida y diseño personalizado para cada cliente. <br>
+                <p class="parrafo__segundo">Desarrollamos páginas web de alto impacto apuntadas a maximizar resultados. Somos especialistas en generar soluciones a medida y diseño personalizado para cada cliente. <br>
                     Realmente creemos que con una estrategia web correcta, comunicación acertada y diseño creativo, tu empresa puede sacar un provecho de internet MUY superior al que imaginas posible. <br>
                     Y QUEREMOS AYUDARTE A LOGRARLO.</p>
               </div>
               <div class="carousel-item parrafo">
                 <h2 class="parrafo__titulo">MÁXIMA ATENCIÓN AL DETALLE</h2>
-                      <p">Para lograr el famoso efecto «wow» de nuestros clientes en internet, trabajamos el diseño web cuidando los detalles al máximo. <br> Seleccionamos cuidadosamente los 
+                      <p class="parrafo__segundo">Para lograr el famoso efecto «wow» de nuestros clientes en internet, trabajamos el diseño web cuidando los detalles al máximo. <br> Seleccionamos cuidadosamente los 
                       elementos, los colores, la distribución, la tipografía. Cada detalle cuenta.  La luz de las fotos, contrastes, llamados a la acción… consideramos cada aspecto del diseño.</p>
               </div>
               <div class="carousel-item parrafo">
                 <h2 class="parrafo__titulo">GENERAMOS ESTRATEGIAS EXITOSAS</h2>
-                      <p>Nos especializamos en el desarrollo, implementación y optimización de páginas web. Proveemos soluciones personalizadas para cada necesidad. Ponemos en práctica un enfoque
+                      <p class="parrafo__segundo">Nos especializamos en el desarrollo, implementación y optimización de páginas web. Proveemos soluciones personalizadas para cada necesidad. Ponemos en práctica un enfoque
                         estratégico de marketing que permite lograr páginas web que obtienen resultados concretos.</p>
               </div>
             </div>
