--- a/pages/faq.html
+++ b/pages/faq.html
@@ -15,7 +15,7 @@
 </head>
 <body>
     <header class="header">
-        <img class="logo" src="../imagenes/logo.png" alt="Logotipo Diseño Web" width="150">
+        <img class="logo" src="../imagenes/logo.png" alt="Logotipo Diseño Web">
             
         <nav class="navegador">
             <ul class="navegador__lista">
